# tui

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  callback-discussions.md  callback-discussions.md.bak  callback-implementation-plan.md  claude-code-improvements.md  claude-code.md  deploy_local.sh  discrepancies.md  ideas.md  optimizations.md  problem-setup.md  run.sh  rustfmt.toml  test.md  test_ci_delete_me.txt  test_git_ci.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-file-lengths.sh  check-folder-sizes.sh  code_length.yml  rust.yml
brilliant-cv/: metadata.toml
brilliant-cv/modules_en/: skills.typ
crates/cp-base/: Cargo.toml
crates/cp-base/src/: actions.rs  cache.rs  config.rs  constants.rs  lib.rs  llm_types.rs  modules.rs  panels.rs  question_form.rs  shared.rs  tool_defs.rs  tools.rs  ui.rs
crates/cp-base/src/config/: constants.rs  mod.rs
crates/cp-base/src/state/: actions.rs  autocomplete.rs  config.rs  context.rs  message.rs  mod.rs  render_cache.rs  runtime.rs  watchers.rs
crates/cp-mod-brave/: Cargo.toml
crates/cp-mod-callback/: Cargo.toml
crates/cp-mod-console/: Cargo.toml
crates/cp-mod-console/src/: lib.rs  manager.rs  panel.rs  pollers.rs  ring_buffer.rs  tools.rs  types.rs
crates/cp-mod-console/src/server/: main.rs  protocol.rs
crates/cp-mod-debug/: Cargo.toml
crates/cp-mod-files/: Cargo.toml
crates/cp-mod-firecrawl/: Cargo.toml
crates/cp-mod-git/: Cargo.toml
crates/cp-mod-github/: Cargo.toml
crates/cp-mod-glob/: Cargo.toml
crates/cp-mod-grep/: Cargo.toml
crates/cp-mod-logs/: Cargo.toml
crates/cp-mod-memory/: Cargo.toml
crates/cp-mod-preset/: Cargo.toml
crates/cp-mod-prompt/: Cargo.toml
crates/cp-mod-scratchpad/: Cargo.toml
crates/cp-mod-spine/: Cargo.toml
crates/cp-mod-tmux/: Cargo.toml
crates/cp-mod-todo/: Cargo.toml
crates/cp-mod-tree/: Cargo.toml
crates/cp-mod-typst/: Cargo.toml
crates/cp-mod-typst/src/: cli_parser.rs  compiler.rs  lib.rs  packages.rs  templates.rs  tools.rs  tools_execute.rs  types.rs  watchlist.rs
docs/: TECHNICAL_DEBT.md  audit_cache.py  claude_pricing.md  console-server.md  ideas.md  prompt-building.md  refactor.md  retex.md  web_module_design.md  workers.md
docs/brave/: llm-context.md  search.md
docs/firecrawl/: map.md  scrape.md  search.md
docs/to-sort/: claude-code.md  gh-cli.md  git-cli.md  git_gh_module_rework.md  optimizations.md
graceful-genetics/: main.typ
src/: actions.rs  api.rs  background.rs  cache.rs  callbacks.rs  config.rs  constants.rs  context_cleaner.rs  events.rs  gh_watcher.rs  highlight.rs  main.rs  mouse.rs  perf.rs  persistence.rs  profiler.rs  state.rs  tool_defs.rs  typewriter.rs  ui.rs  watcher.rs
src/actions/: config.rs  helpers.rs  input.rs  mod.rs  streaming.rs
src/app/: app.rs  background.rs  context.rs  events.rs  mod.rs  panels.rs  prompt_builder.rs
src/core/: app.rs  context.rs  init.rs  mod.rs  panels.rs  wait.rs
src/help/: commands.rs
src/infra/: api.rs  config.rs  constants.rs  gh_watcher.rs  mod.rs  profiler.rs  tool_defs.rs  tools.rs  watcher.rs
src/llms/: anthropic.rs  claude_code.rs  claude_code_api_key.rs  deepseek.rs  error.rs  grok.rs  groq.rs  mod.rs  openai_compat.rs
src/modules/: mod.rs
src/panels/: conversation.rs  file.rs  git.rs  glob.rs  grep.rs  memory.rs  mod.rs  overview.rs  scratchpad.rs  tmux.rs  todo.rs  tree.rs
src/persistence/: config.rs  message.rs  mod.rs  panel.rs  worker.rs  writer.rs
src/state/: cache.rs  config.rs  context.rs  message.rs  mod.rs  runtime.rs
src/tools/: close_context.rs  create.rs  edit_file.rs  (+14 more)
test-callbacks/: barnacle.rs  crew_manifest.txt  hello600.rs  ship_log.txt
test-timeout/: cannonball.txt
test-typst/: ahoy.typ
website/: index-old.html  index.html  script.js  style-old.css  style.css
yamls/: library.yaml  presets.yaml  prompts.yaml  themes.yaml
(+344 files in other folders)
