[workspace]
members = [".", "crates/cp-base", "crates/cp-mod-callback", "crates/cp-mod-console", "crates/cp-mod-files", "crates/cp-mod-git", "crates/cp-mod-github", "crates/cp-mod-logs", "crates/cp-mod-memory", "crates/cp-mod-scratchpad", "crates/cp-mod-spine", "crates/cp-mod-todo", "crates/cp-mod-tree", "crates/cp-mod-prompt", "crates/cp-mod-preset", "crates/cp-mod-typst", "crates/cp-mod-brave", "crates/cp-mod-firecrawl"]

[workspace.dependencies]
cp-base = { path = "crates/cp-base" }
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
chrono = "0.4"
regex = "1.10"
ignore = "0.4"
globset = "0.4"
unicode-width = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
cp-base.workspace = true
cp-mod-console = { path = "crates/cp-mod-console" }
cp-mod-callback = { path = "crates/cp-mod-callback" }
cp-mod-scratchpad = { path = "crates/cp-mod-scratchpad" }
cp-mod-todo = { path = "crates/cp-mod-todo" }
cp-mod-memory = { path = "crates/cp-mod-memory" }
cp-mod-tree = { path = "crates/cp-mod-tree" }
cp-mod-git = { path = "crates/cp-mod-git" }
cp-mod-logs = { path = "crates/cp-mod-logs" }
cp-mod-github = { path = "crates/cp-mod-github" }
cp-mod-files = { path = "crates/cp-mod-files" }
cp-mod-spine = { path = "crates/cp-mod-spine" }
cp-mod-preset = { path = "crates/cp-mod-preset" }
cp-mod-prompt = { path = "crates/cp-mod-prompt" }
cp-mod-typst = { path = "crates/cp-mod-typst" }
cp-mod-brave = { path = "crates/cp-mod-brave" }
cp-mod-firecrawl = { path = "crates/cp-mod-firecrawl" }
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
chrono.workspace = true
ignore.workspace = true
globset.workspace = true
regex.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"] }
dotenvy = "0.15"
unicode-width.workspace = true
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
secrecy = { version = "0.10", features = ["serde"] }
notify = "6.1"
