[package]
name = "cp-base"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
chrono.workspace = true
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
